Prod version developed

--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,4 @@ DATABASE_URL=postgresql://superheroes:superheroes@db:5432/superheroes_dev
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+APP_FOLDER=/usr/src/app
